manifests/static_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
  namespace: staticapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /statics.html
        pathType: Prefix
        backend:
          service:
            name: static-service
            port:
              number: 8000
